fixing refactoring errors in getDataFromMicroScore()